# solana-dex-analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-terraform.yml  deploy.yml  push-pipeline-image.yml
dashboards/: lp-visibility.json  market-share.json  pipeline-status.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_date.sql  dim_pool.sql  dim_token.sql  fct_dex_market_share_daily.sql  fct_pool_trailing_24h.sql  schema.yml
dbt/models/staging/: schema.yml  stg_dex_market_share.sql  stg_dex_pools.sql
dbt/tests/: assert_market_share_all_dexes_latest.sql  assert_no_future_snapshots.sql  assert_no_negative_volume.sql  assert_pools_all_dexes_latest.sql  assert_pools_min_rows_latest.sql
docker/: Dockerfile
scripts/: publish_image.sh
src/: bigquery.py  config.py  freshness.py  gcs.py  logging.py  pipeline.py  sources.py
src/config/: settings.py
src/flows/: solana_daily.py
src/sources/: base.py
src/sources/defillama/: __init__.py  client.py  parser.py
src/sources/meteora/: __init__.py  client.py  parser.py
src/sources/orca/: __init__.py  client.py  parser.py
src/sources/raydium/: __init__.py  client.py  parser.py
src/tasks/: dbt_transform.py  ingest_market_share.py  ingest_pools.py  load_market_share.py  load_pools.py
src/utils/: bigquery.py  gcs.py  logging.py  snapshots.py  temporal.py
static/: solana-analytics.drawio
terraform/: cicd.tf  cloud_run.tf  grafana.tf  main.tf  monitoring.tf  outputs.tf  providers.tf  services.tf  variables.tf
tests/integration/: test_live_sources.py
tests/unit/: test_defillama_client.py  test_defillama_parser.py  test_meteora_client.py  test_meteora_parser.py  test_orca_client.py  test_orca_parser.py  test_raydium_client.py  test_raydium_parser.py
