[project]
name = "solana-dex-analytics"
version = "0.1.0"
description = "Solana DEX analytics data platform on GCP"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-secret-manager>=2.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.5.0",
    "structlog>=24.4.0",
    "dbt-core>=1.8.0",
    "dbt-bigquery>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]
